--- a/src/freenet/clients/http/staticfiles/themes/clean/layout.css
+++ b/src/freenet/clients/http/staticfiles/themes/clean/layout.css
@@ -1,6 +1,8 @@
 ﻿/* layout-clean */
 
-/* overall settings */
+/* 
+ * Overall Settings
+ */
 
 div,
 h1,
@@ -56,7 +58,9 @@ form {
 	padding: 0;
 }
 
-/* body and page header */
+/*
+ * Body and Page Header
+ */
 
 body {
 	margin: 0 0 2em 0;
@@ -66,7 +70,9 @@ body {
 #page {
 }
 
-/* page's topbar */
+/*
+ * Top Title Area
+ */
 
 #topbar {
 	background-image: url(/static/themes/clean/logo.png);
@@ -79,7 +85,6 @@ body {
 	padding: 5px;
 }
 
-/* Top Title Area */
 #topbar h1 {
 	font-size: 20pt;
 	margin: 0;
@@ -87,7 +92,9 @@ body {
 	text-align: center;
 }
 
-/* navigation */
+/* 
+ * Navigation
+ */
 
 div#navbar {
 	border-width: 1px;
@@ -138,9 +145,13 @@ ul.subnavlist {
 	border-style: solid;
 }
 
-/* alerts */
+/*
+ * Alerts
+ */
 
-/* infoboxes */
+/* 
+ * Infoboxes
+ */
 
 div.infobox {
 	margin: 0 0 5px 0;
@@ -205,7 +216,9 @@ li.alert-summary-text-minor {
 	background: url(/static/themes/clean/information-16.png) left center no-repeat;
 }
 
-/* content */
+/*
+ * Content
+ */
 
 #content {
 	margin: 5px 5px 5px 0;
@@ -225,8 +238,9 @@ li.alert-summary-text-minor {
 	list-style: none;
 }
 
-/* plugins page */
-
+/*
+ * Plugins Page
+ */
 
 table.plugins td,
 table.plugins th {
@@ -242,7 +256,9 @@ table.plugins form {
 	display: inline;
 }
 
-/* configuration page */
+/* 
+ * Configuration Page
+ */
 
 ul.config {
 	margin: 0 0 5px 0;
@@ -292,7 +308,9 @@ ul.config input[type=text] {
 	width: 70%;
 }
 
-/* darknet page */
+/* 
+ * Darknet Page
+ */
 
 table.darknet_connections td,
 table.darknet_connections th {
@@ -338,7 +356,9 @@ table.sentmessagetypes th {
 	font-size: 7pt;
 }
 
-/* statistics page */
+/* 
+ * Statistics Page
+ */
 
 div.peercircle {
   margin: 0 auto;
@@ -366,7 +386,9 @@ div.histogramLabel {
   font-size: 60%;
 }
 
-/* queue page */
+/* 
+ * Queue Page
+ */
 
 table.queue td,
 table.queue th {
@@ -428,9 +450,13 @@ div.n2ntm-message-text {
 	padding: 10px;
 }
 
-/* translation */
+/* 
+ * Translation
+ */
 
-/* statusbar */
+/* 
+ * Statusbar
+ */
 
 div#statusbar-container {
 	border-top-width: 1px;
