--- a/src/freenet/clients/http/staticfiles/themes/sky/layout.css
+++ b/src/freenet/clients/http/staticfiles/themes/sky/layout.css
@@ -1,4 +1,4 @@
-﻿/* layout-clean */
+/* layout-sky */
 
 /* 
  * Overall Settings
@@ -40,22 +40,11 @@ pre,
 textarea {
 	font-family: Courier;
 	font-weight: normal;
-	font-size: 8pt;
+	font-size: 80%;
 }
 
 pre#reference {
 	overflow: auto;
-}
-
-pre,
-table {
-	margin: 0 0 5px 0;
-	padding: 0;
-}
-
-form {
-	margin: 0 0 5px 0;
-	padding: 0;
 }
 
 /*
@@ -63,7 +52,7 @@ form {
  */
 
 body {
-	margin: 0 0 2em 0;
+	margin: 0;
 	padding: 0;
 }
 
@@ -72,11 +61,9 @@ body {
  */
 
 #topbar {
-	background-image: url(/static/themes/clean/logo.png);
+	background-image: url(logo.png);
 	background-position: 30px 3px;
 	background-repeat: no-repeat;
-	border-bottom-style: solid;
-	border-bottom-width: 1px;
 	margin: 0;
 	min-height: 50px;
 	padding: 5px;
@@ -93,53 +80,82 @@ body {
  * Navigation
  */
 
-div#navbar {
-	border-width: 1px;
-	border-style: solid;
-	float: left;
-	margin: 5px 5px 5px 0px;
-	padding: 0px;
-	padding-bottom: 4em;
-	width: 170px;
+#navbar {
+	border-top-style: solid;
+	border-top-width: 1px;
+	margin-bottom: 0px;
+	padding: 0;
 }
 
-div#navbar a {
+#navbar ul {
+	margin: 0;
+	padding: 0;
+	width: 100%;
+	display: table;
+	border-collapse: collapse;
+	border: 0px hidden;
+}
+
+#navbar li {
+	border-left-style: solid;
+	border-left-width: 1px;
+	display: table-cell;
+	list-style-type: none;
+	margin: 0px;
+	padding-left: 5px;
+	padding-right: 5px;
+	text-align: center;
+}
+
+#navbar a {
 	text-decoration: none;
 	display: block;
-	padding: 1px 1px 1px 5px;
+	width: 100%;
+	height: 100%;
 }
 
-div#navbar ul,
-div#navbar ul li ul {
-	list-style-type: none;
+#navlist li {
+	border-bottom-width: 3px;
+	border-bottom-style: solid;
+}
+
+#selected-subnavbar {
 	padding: 0;
+	border-bottom-style: #d0d0f0;
+	border-bottom-width: 1px
+}
+
+#selected-subnavbar ul {
 	margin: 0;
+	padding: 0;
+	width: 100%;
+	display: table;
+	border-collapse: collapse;
+	border: 0px hidden;
 }
 
-div#navbar ul li ul {
-	margin-left: 20px;
-	padding-bottom: 10px;
-	padding-top: 1px;
+#selected-subnavbar li {
+	border-left-style: solid;
+	border-left-width: 1px;
+	display: table-cell;
+	list-style-type: none;
+	margin: 0px;
+	text-align: center;
 }
 
-div#navbar ul li {
-	padding-top: 5px;
-}
-div#navbar ul li ul li:first-child {
-	padding-top: 0;
-}
-
-div#navbar ul#navlist li.navlist-selected ul li a,
-div#navbar ul#navlist li ul li a {
-	font-size: 0.9em;
+#selected-subnavbar a {
+	text-decoration: none;
+	display: block;
+	width: 100%;
+	height: 100%;
 }
 
-/* this border is only displayed in dropdown mode */
+#navlist .subnavlist {
+    display:none;
+}
 
-ul.subnavlist-selected,
-ul.subnavlist {
-	border-width: 1px;
-	border-style: solid;
+#navlist .subnavlist-selected {
+    display:none;
 }
 
 /*
@@ -153,14 +169,12 @@ ul.subnavlist {
 div.infobox {
 	border-style: solid;
 	border-width: 1px;
-	margin: 0 0 5px 0;
+	margin: 10px;
 	padding: 10px;
 }
 
 div.infobox div.infobox-header {
-	background-position: right;
-	background-repeat: no-repeat;
-	border-bottom-style: dotted;
+	border-bottom-style: solid;
 	border-bottom-width: 1px;
 	font-size: 11pt;
 	font-weight: bold;
@@ -168,49 +182,30 @@ div.infobox div.infobox-header {
 	padding: 10px 35px 10px 10px;
 }
 
-div.infobox-information div.infobox-header {
-	background-image: url(/static/themes/clean/information.png);
-}
-
-div.infobox-warning div.infobox-header {
-	background-image: url(/static/themes/clean/warning.png);
-}
-
-div.infobox-alert div.infobox-header {
-	background-image: url(/static/themes/clean/alert.png);
-}
-
-div.infobox-error div.infobox-header {
-	background-image: url(/static/themes/clean/error.png);
-}
-
-div.infobox-query div.infobox-header {
-	background-image: url(/static/themes/clean/query.png);
-}
-
-div.infobox-success div.infobox-header {
-	background-image: url(/static/themes/clean/success.png);
+div.infobox-summary-status-content {
+	padding: 0px;
 }
 
 ul.alert-summary {
 	list-style-type: none;
 	text-indent: 20px;
+	padding-left: 20px;
 }
 
 li.alert-summary-text-error {
-	background: url(/static/themes/clean/error-16.png) left center no-repeat;
+	background: url(/static/themes/sky/error-16.png) left center no-repeat;
 }
 
 li.alert-summary-text-alert {
-	background: url(/static/themes/clean/alert-16.png) left center no-repeat;
+	background: url(/static/themes/sky/alert-16.png) left center no-repeat;
 }
 
 li.alert-summary-text-warning {
-	background: url(/static/themes/clean/warning-16.png) left center no-repeat;
+	background: url(/static/themes/sky/warning-16.png) left center no-repeat;
 }
 
 li.alert-summary-text-minor {
-	background: url(/static/themes/clean/information-16.png) left center no-repeat;
+	background: url(/static/themes/sky/information-16.png) left center no-repeat;
 }
 
 /*
@@ -218,11 +213,8 @@ li.alert-summary-text-minor {
  */
 
 #content {
-	margin: 5px 5px 5px 0;
-	padding: 0 0 2em 0;
-	position: absolute;
-	left: 177px;
-	right: 0px;
+	margin-bottom: 2em;
+	padding: 0;
 }
 
 .interfacelink {
@@ -239,14 +231,12 @@ li.alert-summary-text-minor {
  * Plugins Page
  */
 
-table.plugins td,
-table.plugins th {
-	font-size: 8pt;
+table.plugins {
+	width: 100%;
 }
 
 table.plugins span {
 	font-weight: bold;
-	font-size: 8pt;
 }
 
 table.plugins form {
@@ -257,51 +247,52 @@ table.plugins form {
  * Configuration Page
  */
 
+table.config_navigation {
+	list-style-type: none;
+	margin-top: 10px;
+}
+
 ul.config {
-	border-top-width: 1px;
-	border-top-style: solid;
-	border-right-width: 1px;
-	border-right-style: solid;
-	border-left-width: 1px;
-	border-left-style: solid;
+	border-style: solid;
+	border-width: 1px;
 	margin: 0 0 5px 0;
 	padding: 0;
 }
 
 ul.config li {
-	border-bottom-style: solid;
-	border-bottom-width: 1px;
 	list-style: none;
-	margin: 0;
-	padding: 15px 10px 15px 10px;
+	margin: 5px;
+	padding: 5px;
 	text-align: left;
 }
 
-div.configprefix {
-	border-bottom-width: 1px;
-	border-bottom-style: dotted;
+ul.config span.configprefix {
 	display: block;
 	font-size: 16pt;
-	font-variant: small-caps;
 	font-weight: bold;
-	margin: 0;
-	padding: 10px 35px 10px 10px;
+	text-indent: 15px;
+	width: 100%;
 }
 
 ul.config span.configshortdesc {
-	font-weight: bold;
+	display: block;
 	float: left;
+	font-weight: bold;
+	margin-right: 10px;
 	text-align: left;
 	width: 30%;
 }
 
 ul.config span.configlongdesc {
 	display: block;
-	padding-top: 15px;
-	text-align: left;
+	clear: left;
 }
 
 ul.config input[type=text] {
+	width: 67%;
+}
+
+span.config {
 	width: 70%;
 }
 
@@ -311,27 +302,38 @@ ul.config input[type=text] {
 
 table.darknet_connections td,
 table.darknet_connections th {
-	font-size: 8pt;
+	font-size: 80%;
+}
+
+table.column {
+	width: 100%;
+	border: none;
 }
 
 table.column td {
 	vertical-align: top;
+	border: none;
+	padding: 0;
 }
 
-table.column span,
 table.darknet_connections span {
 	font-weight: bold;
-	font-size: 8pt;
+	font-size: 80%;
 }
 
-table.column span {
-	text-transform: uppercase;
+table.column div {
+	margin-top: 0;
+	margin-bottom: 0;
 }
 
-div.infobox-content ul {
-	margin: 0;
-	padding: 0;
-	list-style: none;
+table.column ul {
+	list-style-type: none;
+	margin: 0px;
+	padding: 0px;
+}
+
+table.darknet_connections {
+	width: 100%;
 }
 
 tr.messagetypes {
@@ -351,6 +353,18 @@ table.receivedmessagetypes th,
 table.sentmessagetypes td,
 table.sentmessagetypes th {
 	font-size: 7pt;
+}
+
+#reftext {
+	width: 100%;
+}
+
+#refurl {
+	width: 100%;
+}
+
+#reffile {
+	width: 100%;
 }
 
 /* 
@@ -405,44 +419,42 @@ table.queue span {
 div.progressbar {
 	border-style: solid;
 	border-width: 1px;
-	height: 18px;
-	position: relative;
+	float: left;
+	height:15px;
+	margin: 0px;
+	margin-right: 3px;
 	width: 130px;
 }
 
 div.progressbar-done {
 	float: left;
-	height: 18px;
+	height:15px;
 }
 
 div.progressbar-min {
 	float: left;
-	height: 18px;
+	height:15px;
 }
 
 div.progressbar-failed {
 	float: left;
-	height: 18px;
+	height:15px;
 }
 
 div.progressbar-failed2 {
 	float: left;
-	height: 18px;
-}
-
-div.progress_fraction_finalized {
-	position: absolute;
-	left: 5px;
-	font-weight: bold;
-}
-
-div.progress_fraction_not_finalized {
-	position: absolute;
-	left: 5px;
-	font-style: italic;
+	height:15px;
 }
 
 /* Node to node text message */
+
+#n2ntmtext {
+	width: 100%;
+}
+
+#n2nbox input[type=submit] {
+	width: 100%;
+}
 
 div.n2ntm-message-text {
 	margin: 10px;
@@ -462,6 +474,7 @@ div#statusbar-container {
 	border-bottom-width: 1px;
 	border-top-style: solid;
 	border-top-width: 1px;
+	font-size: 1.2em;
 	margin: 5px 0px 0px 0px;
 	padding: 3px 3px 0px 3px;
 	position: fixed;
@@ -482,6 +495,7 @@ div#statusbar div {
 
 div#statusbar div.progressbar {
 	display: inline-block;
+	float: none;
 	margin-bottom: -3px;
 }
 
