--- a/src/freenet/clients/http/staticfiles/themes/sky-dropdown/theme.css
+++ b/src/freenet/clients/http/staticfiles/themes/sky-dropdown/theme.css
@@ -1,7 +1,7 @@
-﻿/* sky theme */
+/* sky-dropdown theme */
 
 /* navigation behavior */
-@import url(/static/behavior-dynamic.css);
+@import url(/static/behavior-dropdown.css);
 
 /* layout */
 @import url(/static/themes/sky/layout.css);
