--- a/src/freenet/clients/http/staticfiles/behavior-classic.css
+++ b/src/freenet/clients/http/staticfiles/behavior-classic.css
@@ -15,9 +15,8 @@ li.navlist-selected ul.subnavlist {
 	display: block;
 }
 
-/* The subnavbar appears under the main navbar and shows the currently selected
- * submenu items. Most themes prefer to use the ul.subnavlist in the main navbar 
- * instead so it is not shown by default. */
+/* The subnavbar is not used when the navigation menu is on the
+ * left side of the screen */
 
 div#selected-subnavbar {
 	display: none;
