--- a/src/freenet/clients/http/staticfiles/behavior-static.css
+++ b/src/freenet/clients/http/staticfiles/behavior-static.css
@@ -10,9 +10,8 @@
 /* We don't need to set any submenu parameters to get this behavior - we just
  * need to let the elements use their default display: block behavior. */
 
-/* The subnavbar appears under the main navbar and shows the currently selected
- * submenu items. Most themes prefer to use the ul.subnavlist in the main navbar 
- * instead so it is not shown by default. */
+/* The subnavbar is not used when the navigation menu is on the
+ * left side of the screen */
 
 div#selected-subnavbar {
 	display: none;
