--- a/src/freenet/clients/http/staticfiles/themes/grayandblue/layout.css
+++ b/src/freenet/clients/http/staticfiles/themes/grayandblue/layout.css
@@ -95,12 +95,15 @@ body {
  */
 
 div#navbar {
-	border-width: 1px;
-	border-style: dotted;
 	float: left;
-	margin: 5px 0px 10px 10px;
 	padding: 10px;
 	width: 135px;
+}
+
+div#navbar, div#selected-subnavbar {
+	border-width: 1px;
+	border-style: dotted;
+	margin: 5px 5px 10px 10px;
 }
 
 div#navbar a {
@@ -141,6 +144,38 @@ ul.subnavlist-selected,
 ul.subnavlist {
 	border-width: 1px;
 	border-style: dotted;
+}
+
+/* the subnavbar is only displayed in top mode */
+
+#selected-subnavbar {
+	padding: 0;
+	border-top-width: 0px !important; 
+	position: relative;
+	top: -10px;
+}
+
+#selected-subnavbar ul {
+	margin: 0;
+	padding: 0;
+	width: 100%;
+	display: table;
+	border-collapse: collapse;
+	border: none;
+}
+
+#selected-subnavbar li {
+	display: table-cell;
+	list-style-type: none;
+	margin: 0px;
+	text-align: center;
+}
+
+#selected-subnavbar a {
+	text-decoration: none;
+	display: block;
+	width: 100%;
+	height: 100%;
 }
 
 /*
