--- a/src/freenet/clients/http/staticfiles/themes/grayandblue/layout.css
+++ b/src/freenet/clients/http/staticfiles/themes/grayandblue/layout.css
@@ -77,6 +77,8 @@ body {
 	background-image: url(/static/themes/grayandblue/logo.png);
 	background-position: 200px 8px;
 	background-repeat: no-repeat;
+	border-bottom-style: solid;
+	border-bottom-width: 0px;
 	margin: 0;
 	min-height: 50px;
 	padding: 5px;
@@ -96,21 +98,35 @@ body {
 
 div#navbar {
 	float: left;
-	padding: 10px;
-	width: 135px;
+	margin: 0px;
+	padding: 0px;
+	position: relative;
+	left: 10px;
+	top: 10px;
+	width: 155px;
 }
 
 div#navbar, div#selected-subnavbar {
 	border-width: 1px;
 	border-style: dotted;
-	margin: 5px 5px 10px 10px;
+	margin: 0px;
 }
 
 div#navbar a {
-	font-weight: bold;
 	text-decoration: none;
 	display: block;
-	padding: 1px;
+	padding: 0px;
+	padding-left: 1em;
+	padding-right: 5px;
+	padding-top: 5px;
+}
+
+div#navbar ul#navlist li a {
+	font-weight: bold;
+}
+
+div#navbar ul#navlist li ul a{
+	font-weight: normal;
 }
 
 div#navbar ul,
@@ -121,16 +137,7 @@ div#navbar ul li ul {
 }
 
 div#navbar ul li ul {
-	margin-left: 20px;
-	padding-bottom: 1px;
-	padding-top: 1px;
-}
-
-div#navbar ul li {
-	padding-top: 5px;
-}
-div#navbar ul li ul li:first-child {
-	padding-top: 0;
+	margin-left: 1.5em;
 }
 
 div#navbar ul#navlist li.navlist-selected ul li a,
@@ -149,10 +156,10 @@ ul.subnavlist {
 /* the subnavbar is only displayed in top mode */
 
 #selected-subnavbar {
-	padding: 0;
 	border-top-width: 0px !important; 
+	padding: 0;
 	position: relative;
-	top: -10px;
+	top: 0px;
 }
 
 #selected-subnavbar ul {
@@ -189,7 +196,7 @@ ul.subnavlist {
 div.infobox {
 	border-style: dotted;
 	border-width: 1px;
-	margin: 0 0 5px 0;
+	margin: 0 0 10px 0;
 	padding: 10px;
 }
 
@@ -256,11 +263,11 @@ li.alert-summary-text-minor {
  */
 
 #content {
-	margin: 5px 5px 5px 10px;
-	padding: 0 0 2em 0;
+	margin: 10px;
+	padding: 0;
+	padding-bottom: 2em;
 	position: absolute;
 	left: 167px;
-	right: 0px;
 }
 
 .interfacelink {
