Fix CSS bugs, make layout.css and color.css more consistent with each other from a coding style standpoint but retain the distinctions from the original themes.

--- a/src/freenet/clients/http/staticfiles/themes/clean/layout.css
+++ b/src/freenet/clients/http/staticfiles/themes/clean/layout.css
@@ -118,11 +118,12 @@ div#navbar a {
 	padding-top: 5px;
 }
 
-div#navbar ul#navlist li a {
+ul#navlist li a {
 	font-weight: normal;
 }
 
-div#navbar ul#navlist li ul a{
+ul#navlist li ul a,
+ul#selected-subnavbar-list li a {
 	font-weight: normal;
 }
 
