modify theme names for backwards compatibility

--- a/src/freenet/clients/http/staticfiles/themes/grayandblue/theme.css
+++ b/src/freenet/clients/http/staticfiles/themes/grayandblue/theme.css
@@ -1,8 +1,8 @@
-﻿/* grayandblue theme */
+﻿/* grayandblue-classic theme */
 
 /* navigation behavior */
-@import url(/static/behavior-dynamic.css);
- 
+@import url(/static/behavior-classic.css);
+
 /* layout */
 @import url(/static/themes/grayandblue/layout.css);
 
