--- a/src/freenet/clients/http/staticfiles/themes/grayandblue-dynamic/theme.css
+++ b/src/freenet/clients/http/staticfiles/themes/grayandblue-dynamic/theme.css
@@ -1,8 +1,8 @@
-﻿/* grayandblue-classic theme */
+﻿/* grayandblue theme */
 
 /* navigation behavior */
-@import url(/static/behavior-classic.css);
-
+@import url(/static/behavior-dynamic.css);
+ 
 /* layout */
 @import url(/static/themes/grayandblue/layout.css);
 
