--- a/src/freenet/clients/http/staticfiles/themes/sky-dynamic/theme.css
+++ b/src/freenet/clients/http/staticfiles/themes/sky-dynamic/theme.css
@@ -1,7 +1,7 @@
 ﻿/* sky theme */
 
 /* navigation behavior */
-@import url(/static/behavior-top.css);
+@import url(/static/behavior-dynamic.css);
 
 /* layout */
 @import url(/static/themes/sky/layout.css);
