--- a/src/freenet/clients/http/staticfiles/behavior-dropdown.css
+++ b/src/freenet/clients/http/staticfiles/behavior-dropdown.css
@@ -37,7 +37,9 @@ li.navlist-selected:hover ul.subnavlist-selected {
 /* move the content window to the left side of the screen */
 
 div#content {
-	position: inherit !important;
+	position: relative !important;
+	top: 5px !important;
+	left: 0px !important;
 }
 
 /* move the navbar to the top of the screen */
@@ -47,13 +49,13 @@ div#navbar {
 	text-align: center !important;
 	padding: 0px !important;
 	position: relative !important;
-	top: 0px !important;
+	top: 5px !important;
 	left: 0px !important;
 }
 
 div#navbar a {
 	 padding-left: 5px !important;
-	 padding-right: 5px! important;
+	 padding-right: 5px !important;
 }
 
 #navlist li a {
