--- a/src/freenet/clients/http/staticfiles/themes/grayandblue/layout.css
+++ b/src/freenet/clients/http/staticfiles/themes/grayandblue/layout.css
@@ -38,11 +38,6 @@ form {
  * Body and Page Header
  */
 
-body {
-	margin: 0;
-	padding: 0;
-}
-
 /*
  * Top Title Area
  */
@@ -50,20 +45,13 @@ body {
 #topbar {
 	background-image: url(/static/themes/grayandblue/logo.png);
 	background-position: 200px 8px;
-	background-repeat: no-repeat;
-	border-bottom-style: solid;
 	border-bottom-width: 0px;
-	margin: 0;
-	min-height: 50px;
-	padding: 5px;
 }
 
 #topbar h1 {
-	font-size: 28px;
-	font-weight:900;
-	margin: 0;
-	padding: 20px 0 0 0;
-	text-align: center;
+	font-size: 2.1em;
+	font-weight: 900;
+	padding-top: 20px;
 }
 
 /* 
